--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.7",
+    "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.3"
   }
 }
